apps/argocd/prd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.djasko.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.djasko.com
    secretName: argocd-djasko-com-tls
